--- a/findly-builder/src/app/components/add-result/add-result.component.scss
+++ b/findly-builder/src/app/components/add-result/add-result.component.scss
@@ -48,7 +48,7 @@
     }
 
     .footer{
-        margin-top:70% ;
+        margin-top:5% ;
         .add{
             width: 67px;
             height: 34px;
@@ -68,42 +68,146 @@
         }
     }
 }
-.inline-rec{
-    display:inline-block;
-    
+.accor-scroll-add{
+    height: calc(100vh - 48%);                       
+    &.show_footer{
+        height: calc(100vh - 325px);
+    }
 }
-.ver-center{
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+.selected-all-questions{
+    background: #FFED96;
+    border-radius: 4px;
+    color: #0D6EFD;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    margin: 5px;
+    padding: 10px;
 }
-.record{
-    border-top: 1px solid #979797;
-    border-bottom: 1px solid #979797;
-    padding: 11px;
-    width: 100%;
-}
-.count{
-    font-weight: 600;
-    font-size: 12px;
-}
-.ques{
-    font-weight: 600;
-    font-size: 12px;
-    color: #161928;
-}
-.rec-60{
-    width: 60%;
-}
-.rec-30{
-    width: 30%;
-}
-.rec-10{
-    width: 10%;
-}
-.ans{
-    font-weight: normal;
-    font-size: 12px;
-    color: #979797;
-    width: 50%;
+.accordion-content{   
+    .card-content{
+        // box-shadow: inset 0px -1px 0px #E4E5E7;
+        border: 1px solid #E4E5E7;
+        border-radius: 4px;
+        margin: 0 14px;
+        .card_link{
+            // display: flex;
+            align-items: center;
+            padding: 20px 18px 20px 15px;
+            cursor: pointer;
+            transition: 0.3s all ease-in;
+            box-shadow: inset 0px -1px 0px #E4E5E7;
+            .published-que{                                    
+                border-radius: 2px;
+                padding: 2px 10px;
+                font-size: 12px;                                    
+                margin-left: 38px;
+                display: inline-block;
+                position: relative;
+                top: -8px;
+                background: #EAF6EC;
+                color: #28A745;
+                &.reverted{
+                    background: #FCEAED;
+                    color: #DD3646;
+                }
+            }
+            &.is-checked{
+                background: #E7F1FF;
+                .kr-sg-checkbox{
+                    visibility: visible;
+                }
+            }
+            &[aria-expanded="true"]{
+                background: #E7F1FF;
+                box-shadow: none;
+                .kr-sg-checkbox{
+                    visibility: visible;
+                }
+            }
+            .kr-sg-checkbox{
+                visibility: visible;
+                padding-right: 2px !important;
+            }
+            &:hover{
+                background: #E7F1FF;
+                .kr-sg-checkbox{
+                    visibility: visible;
+                }
+            }
+            .title-desc-sec{
+                width: 93%;
+                .title{
+                    color: #202124;
+                    font-weight: 500;
+                    font-size: 12px;
+                    margin-bottom: 2px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
+                    height: 20px;                                           
+                }
+                .desc{
+                    color: #5F6368;
+                    font-size: 12px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
+                    height: 20px;
+                    b{                                              
+                        font-weight: 400 !important;
+                    }
+                    .markdownItalic{
+                        font-style: normal;
+                    }
+                }
+            }
+        }                     
+        .cardbody{                            
+            padding: 10px 0px 10px 78px;
+            .acc-inner-que{
+                padding: 19px 20px;
+                border-left: 1px solid #E4E5E7;
+                &.check-all{
+                    background: #E7F1FF;
+                }
+                .title{
+                    color: #202124;
+                    font-weight: 500;
+                    font-size: 14px;
+                    margin-bottom: 2px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
+                }
+                .desc{
+                    color: #5F6368;
+                    font-size: 12px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
+                }
+            }
+            .emptyAltQuestions{
+                padding-top: 10px;
+                padding-right: 120px !important;
+                height: 15px;
+                padding-bottom: 13px;
+            }
+        }
+    }   
+    .divBlockEmptylastChild{
+        display: none;
+        text-align: center;
+        width: 100%;
+        padding: 10%;
+        white-space: break-spaces;
+    }
+    div.divBlockEmptylastChild:first-child {
+        display: block !important;
+    }                                          
 }
