--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -18,7 +18,7 @@
      </div>   
       <div class="data-val" (click) = "mouseEnter()"> <!-- (mouseenter) ="mouseEnter()" -->
          <div class="graph">
-             <div echarts [options]="chartOption" class="demo-chart"></div>
+             <div echarts [options]="staticChartOption" class="demo-chart"></div>
          </div>
      </div>  
      <div class ="graphMode" #graphMode *ngIf="graphMode"  (mouseleave) ="mouseLeave()">
