--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1294,3 +1294,27 @@ div.divBlockEmptylastChild:first-child {
         padding: 0 !important;
     }
 }
+.custom_tooltip_class{
+    margin-left: 20px;
+    margin-top: 6px;
+    opacity: 1 !important;
+    .arrow{
+        right: 20px !important;
+        &::before{
+            border-width: 0 .5rem .5rem;
+            border-bottom-color: #E7F1FF;
+        }
+    }
+    .tooltip-inner{
+        border-radius: 2px;
+        color: #4788C7;
+        background: #E7F1FF;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        padding: 10px;
+        text-align: left;
+        border: 0;
+    }
+}
