--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1253,7 +1253,7 @@ div.divBlockEmptylastChild:first-child {
         box-shadow: 0px -2px 4px rgba(32, 33, 36, 0.2);
         display: block !important;
         button{
-            margin:0 20px 0 0 !important;
+            margin:0 10px 0 0 !important;
         }
     }
 }
@@ -1316,5 +1316,25 @@ div.divBlockEmptylastChild:first-child {
         padding: 10px;
         text-align: left;
         border: 0;
+    }
+}
+.addFieldModalPop{
+    .modal-dialog{
+        max-width: 60% !important;
+        height: calc(100% - 100px);        
+        .modal-content{
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            .modal-body{
+                .top_sec{
+                    padding-bottom: 30px;
+                    border-bottom: 1px solid #E5E8EC;
+                    margin-bottom: 30px;
+                    .mb-20{
+                        margin-bottom: 20px !important;
+                    }
+                }
+            }
+        }
     }
 }
