--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -30,10 +30,13 @@
         </div>
         <div class="table_sec" *ngIf="selectedStage && selectedStage.type === 'fields'">
             <div class="seach_add_feild">
-                <div class="seach-block"><img src="assets/icons/search.svg">Seach</div>
-                <div class="add_feild" (click)="openModalPopup()"><img src="assets/icons/add_plus.svg">Add Field</div>
+                <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
+                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="searchFields">           
+                  </div> 
+                  <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Seach</div>
+                <div class="add_feild" (click)="addEditFiled()"><img src="assets/icons/add_plus.svg">Add Field</div>
             </div>            
-            <div class="table_data_content" *ngIf="selectedStage && selectedStage.config && selectedStage.config.mappings && selectedStage.config.mappings.length">
+            <div class="table_data_content" *ngIf="filelds && filelds.length">
                 <div class="table_header row m-0">
                     <div class="col-2 title">Field Name</div>
                     <div class="col-2 title">Type</div>
@@ -44,21 +47,21 @@
                     <div class="col-1 title"></div>
                 </div>
                 <perfect-scrollbar class="table_body_content">
-                    <div class="table_body row m-0" *ngFor="let field of selectedStage.config.mappings">
-                        <div class="col-2 title">{{filed.name}}</div>
-                        <div class="col-2 title">{{field.type}}</div>
-                        <div class="col-2 title">{{field.isMulti?'Yes':'No'}}</div>
-                        <div class="col-2 title">{{field.required?'Yes':'No'}}</div>
-                        <div class="col-2 title">{{field.stored?'Yes':'No'}}</div>
-                        <div class="col-1 title">{{field.indexed?'Yes':'No'}}</div>
+                    <div class="table_body row m-0" *ngFor="let field of filelds | filter: [ searchFields, 'fieldName']">
+                        <div class="col-2 title">{{field.fieldName}}</div>
+                        <div class="col-2 title">{{field.fieldDataType}}</div>
+                        <div class="col-2 title">{{field.isMultiValued?'Yes':'No'}}</div>
+                        <div class="col-2 title">{{field.isRequired?'Yes':'No'}}</div>
+                        <div class="col-2 title">{{field.isStored?'Yes':'No'}}</div>
+                        <div class="col-1 title">{{field.isIndexed?'Yes':'No'}}</div>
                         <div class="col-1 action_links text-right">
-                            <img src="assets/images/edit-pencil.svg">
-                            <img src="assets/icons/delete-table.svg" class="ml-3">
+                            <img src="assets/images/edit-pencil.svg" (click)="addEditFiled(field)">
+                            <img src="assets/icons/delete-table.svg" class="ml-3" (click)="deleteFieldPop(field)">
                         </div>
                     </div>
                 </perfect-scrollbar>  
                 <div class="footer-simulate">
-                    <button class="kr-sg-button-primary btn_lg"><img src="assets/images/simulate.svg" class="mr-1">Simulate</button>
+                    <button class="kr-sg-button-primary btn_lg" (click)="simulate()"><img src="assets/images/simulate.svg"  class="mr-1">Simulate</button>
                 </div>              
             </div>
         </div>
@@ -228,11 +231,11 @@
             </perfect-scrollbar>    
             <div class="footer-simulate-form">
                 <button class="kr-sg-button-secondary btn_lg">Cancel</button>
-                <button class="kr-sg-button-primary btn_lg"><img src="assets/images/simulate.svg" class="mr-1">Simulate</button>
+                <button class="kr-sg-button-primary btn_lg" (click)="simulate()"><img src="assets/images/simulate.svg" class="mr-1">Simulate</button>
             </div> 
         </div>          
     </div>
-    <div class="simulator-div d-none">
+    <div class="simulator-div " *ngIf="simulteObj && simulteObj.showSimulation"> 
         <div class="header">
             <div class="title">Simulator</div>
             <div class="close_icon"><img src="assets/images/close.svg"></div>
@@ -296,24 +299,25 @@
         <div class="title">Add Field</div>
         <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
     </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body" *ngIf="newFieldObj">
+    <ng-container *ngIf="newFieldObj">
+    <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body textAlignLeft">
         <div class="top_sec" >
             <div class="row m-0 mb-20">
                 <div class="kr-sg-input-text col-10 p-0">
                     <div class="label-text">Field Name</div>
-                    <input type="text" placeholder="Specify Condition" class="input-text" [(ngModel)]="newFieldObj.name">
+                    <input type="text" placeholder="Specify Condition" class="input-text" [(ngModel)]="newFieldObj.fieldName">
                 </div>
             </div>
             <div class="label-text col-12 p-0">Field Type</div>
             <div class="row m-0 align-items-center">                         
                 <div class="kr-sg-dropdowns col-10 p-0">                    
                     <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newFieldObj.type?newFieldObj.type:'Çhoose an option'}}</button>                                            
+                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newFieldObj.fieldDataType?newFieldObj.fieldDataType:'Çhoose an option'}}</button>                                            
                         <ul class="dropdown-menu content-menu">                                                                    
-                          <li  (click)="newFieldObj.type = 'string'"><a>String</a></li>
-                          <li  (click)="newFieldObj.type = 'number'"><a>Number</a></li>
-                          <li  (click)="newFieldObj.type = 'Boolean'"><a>Boolean</a></li>
+                          <li  (click)="newFieldObj.fieldDataType = 'string'"><a>String</a></li>
+                          <li  (click)="newFieldObj.fieldDataType = 'number'"><a>Number</a></li>
+                          <li  (click)="newFieldObj.fieldDataType = 'Boolean'"><a>Boolean</a></li>
                         </ul>
                     </div>
                 </div>
@@ -327,19 +331,19 @@
             <div class="group-checkbox mb-3">
                 <div class="label-text mb-2">Select ones that apply</div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.stored">
+                    <input id="checkbox_grpd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isStored">
                     <label for="checkbox_grpd" class="checkbox-custom-label">Stored</label>
                 </div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpe" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.indexed">
+                    <input id="checkbox_grpe" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isIndexed">
                     <label for="checkbox_grpe" class="checkbox-custom-label">Indexed</label>
                 </div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpf" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.required">
+                    <input id="checkbox_grpf" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isRequired">
                     <label for="checkbox_grpf" class="checkbox-custom-label">Required</label>
                 </div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpfd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isMulti">
+                    <input id="checkbox_grpfd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isMultiValued">
                     <label for="checkbox_grpfd" class="checkbox-custom-label">Multi-Valued</label>
                 </div>
             </div>
@@ -350,8 +354,9 @@
         </div>
     </div>
     </perfect-scrollbar> 
-    <div class="modal-footer text-left" *ngIf="newFieldObj">
-        <button type="button" [disabled]="!(newFieldObj.name) || !(newFieldObj.type)" class="kr-sg-button-primary btn_lg float-right" style="margin: 0 !important;" (click)="addField()">Add</button>                   
+    <div class="modal-footer text-left">
+        <button type="button" [disabled]="!(newFieldObj.fieldName) || !(newFieldObj.fieldDataType)" class="kr-sg-button-primary btn_lg float-right" style="margin: 0 !important;" (click)="addField()">Add</button>                   
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
     </div>    
+</ng-container>
 </kr-modal>
