--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -53,7 +53,7 @@
      <div class="saveCacleSynBlock row m-0">
        <div class="float-right">
         <button class="kr-sg-button-primary btn_lg" (click)="addNewSynonyms(synonymObj)">Save</button>
-        <button class="kr-sg-button-secondary btn_lg" (click)="cancleAddSynonyms()">Cancle</button>
+        <button class="kr-sg-button-secondary btn_lg" (click)="cancleAddSynonyms()">Cancel</button>
        </div>
     </div>
     </div>
@@ -124,7 +124,7 @@
                      <div class="saveCacleSynBlock row m-0">
                       <div class="float-right">
                         <button class="kr-sg-button-primary btn_lg" (click)="updateSynonm(synonym,synonym._id,i)">Save</button>
-                      <button class="kr-sg-button-secondary btn_lg" (click)="cancleAddEdit()">Cancle</button>
+                      <button class="kr-sg-button-secondary btn_lg" (click)="cancleAddEdit()">Cancel</button>
                       </div>
                    </div>
                     </div>
